removed recents and fixed banner on mobile?

--- a/style.css
+++ b/style.css
@@ -159,59 +159,6 @@ li:hover {
     background-color: none;
 }
 
-#recent {
-    display: flex;
-    flex-direction: row;
-    font-size: 36px;
-    gap: 16px;
-    margin-bottom: 64px;
-    padding: 24px;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(135deg, rgba(255, 255, 255, 1) 0%, rgba(245, 248, 255, 1) 100%);
-    border: 1px #dae4ff solid;
-    border-radius: 8px;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-#left-recent {
-    width: 100%;
-}
-
-#r-items {
-    display: flex;
-    flex-direction: row;
-    gap: 24px;
-    width: 100%;
-    justify-content: flex-end;
-}
-
-.r-item {
-    font-size: 16px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    width: 50%;
-    height: auto;
-    border: 1px transparent solid;
-    break-inside: avoid;
-    transition: all .4s cubic-bezier(.23, 1, .32, 1);
-}
-
-.r-item img,
-.r-item video {
-    object-fit: cover;
-    width: 100%;
-    z-index: 0;
-    background-size: cover;
-    border-radius: 8px;
-    flex-wrap: nowrap;
-}
-
-.r-item:hover {
-    transform: rotate(-2.5deg);
-}
-
 .main {
     display: flex;
     flex-direction: column;
@@ -537,43 +484,6 @@ a,
         padding-bottom: 6px;
     } */
 
-    #recent {
-        display: flex;
-        flex-direction: column;
-        font-size: 24px;
-        gap: 16px;
-        margin-bottom: 24px;
-        width: fit-content;
-        padding: 16px;
-        height: fit-content;
-    }
-
-
-    #r-items {
-        flex-direction: row;
-        gap: 24px;
-        justify-content: flex-start;
-        margin-bottom: 0;
-        overflow-x: scroll;
-        scroll-padding: 1rem;
-        scroll-snap-type: both mandatory;
-    }
-
-    .r-item {
-        flex-shrink: 0;
-        font-size: 16px;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        width: 80%;
-        border: 1px transparent solid;
-        scroll-snap-align: start;
-    }
-
-    .r-item:hover {
-        transform: none;
-    }
-
     .projects {
         column-count: 1;
         column-gap: 16px;
@@ -618,11 +528,10 @@ a,
     }
     
     #action button {
-        height: fit-content;
         font-family: Geist;
         font-size: 20px;
-        gap: 8px;
-        padding: 24px 16px;
+        gap: 12px;
+        padding: 16px 16px;
     }
     
     #action button:active {
